local commit just public shift

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@react-three/fiber": "^8.14.3",
     "@react-three/rapier": "^1.1.1",
     "@tweenjs/tween.js": "^21.0.0",
+    "@types/three": "^0.171.0",
+    "@use-gesture/react": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joystick-component": "^6.2.1",
+    "react-three-fpscontrols": "^0.2.0",
     "three": "^0.156.1",
     "zustand": "^4.4.1"
   },
