--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_SHOOT_BUTTON=0
 VITE_AIM_BUTTON=2
 VITE_RELOAD_BUTTON_NAME=R
 VITE_RELOAD_BUTTON_CODE=KeyR
+REACT_APP_SHOPIFY_APP_DOMAIN=gsv01y-gx.myshopify.com
+REACT_APP_SHOPIFY_STOREFRONT_ACCESS_TOKEN=b148c0911287ca8a6f23a6d7bab23110
