--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@react-three/drei": "^9.85.0",
     "@react-three/fiber": "^8.14.3",
     "@react-three/rapier": "^1.1.1",
+    "@shopify/hydrogen-react": "^2024.10.1",
     "@tweenjs/tween.js": "^21.0.0",
     "@types/three": "^0.171.0",
     "@use-gesture/react": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
-    "three": "^0.156.1",
+    "three": "^0.171.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
