--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tweenjs/tween.js": "^21.0.0",
     "@types/three": "^0.171.0",
     "@use-gesture/react": "^10.3.1",
+    "gsap": "^3.12.5",
     "nipplejs": "^0.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
