--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/three": "^0.171.0",
     "@use-gesture/react": "^10.3.1",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.469.0",
     "nipplejs": "^0.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
