--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "sweetalert2": "^11.15.9",
     "three": "^0.171.0",
     "zustand": "^4.4.1"
   },
