--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tweenjs/tween.js": "^21.0.0",
     "@types/three": "^0.171.0",
     "@use-gesture/react": "^10.3.1",
+    "driver.js": "^1.3.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
     "nipplejs": "^0.10.2",
