--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "shopify-buy": "^2.22.0",
     "sweetalert2": "^11.15.9",
     "three": "^0.171.0",
     "zustand": "^4.4.1"
@@ -39,6 +40,7 @@
     "@types/node": "^20.11.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/shopify-buy": "^2.17.4",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.0.3",
