--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.469.0",
     "nipplejs": "^0.10.2",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "shopify-buy": "^2.22.0",
