--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@use-gesture/react": "^10.3.1",
     "dompurify": "^3.2.3",
     "driver.js": "^1.3.1",
+    "fuse.js": "^7.0.0",
     "gsap": "^3.12.5",
     "hydrogen-react": "^0.0.1-security",
     "lucide-react": "^0.469.0",
