--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tweenjs/tween.js": "^21.0.0",
     "@types/three": "^0.171.0",
     "@use-gesture/react": "^10.3.1",
+    "canvas-confetti": "^1.9.3",
     "dompurify": "^3.2.3",
     "driver.js": "^1.3.1",
     "fuse.js": "^7.0.0",
