--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.3.0",
     "@react-three/drei": "^9.85.0",
-    "@react-three/fiber": "^8.14.3",
+    "@react-three/fiber": "^8.17.12",
     "@react-three/rapier": "^1.1.1",
+    "@react-three/xr": "^6.4.12",
     "@shopify/hydrogen-react": "^2024.10.1",
     "@tweenjs/tween.js": "^21.0.0",
     "@types/three": "^0.171.0",
